Swap helm for ivy

--- a/emacs-nougat/nougat/emacs/flycheck.org
+++ b/emacs-nougat/nougat/emacs/flycheck.org
@@ -10,7 +10,7 @@ replacement for the older Flymake extension which is part of GNU Emacs.
 )
 #+end_src
 
-** helm-flycheck
+** COMMENT helm-flycheck
 #+begin_src emacs-lisp
 (use-package helm-flycheck)
 (require 'helm-flycheck)
