--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -37,17 +37,17 @@ Use a prefix argument ARG to indicate creation of a new process instead."
     @ %(projectile-project-root)
     "
       ("SPC" nil)
-      ("a"   projectile-ag)
-      ("s"   helm-projectile-switch-to-buffer)
+      ("a"   counsel-projectile-ag)
+      ("s"   counsel-projectile-switch-to-buffer)
       ("C"   projectile-invalidate-cache)
-      ("d"   helm-projectile-find-dir)
-      ("f"   helm-projectile-find-file-dwim)
+      ("d"   counsel-projectile-find-dir)
+      ("f"   counsel-projectile-find-file-dwim)
       ("k"   projectile-kill-buffers)
       ("o"   projectile-multi-occur)
-      ("w"   helm-projectile-switch-project "switch project")
-      ("g"   helm-grep-do-git-grep)
+      ("w"   counsel-projectile-switch-project "switch project")
+      ("g"   counsel-projectile-git-grep)
       ("v"   projectile-run-vterm-other-window)
-      ("r"   helm-projectile-recentf)
+      ("r"   counsel-projectile-switch-to-buffer)
       ("x"   projectile-remove-known-project)
       ("X"   projectile-cleanup-known-projects)
       ("q"   nil "cancel" :color blue))
