--- a/emacs-nougat/nougat/packages/ivy/ivy.org
+++ b/emacs-nougat/nougat/packages/ivy/ivy.org
@@ -49,9 +49,9 @@ Configure
        :config
            )
     (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
-  (counsel-projectile-modify-action
-   'counsel-projectile-switch-project-action
-   '((default counsel-projectile-switch-project-action-vc)))
+  ;; (counsel-projectile-modify-action
+  ;;  'counsel-projectile-switch-project-action
+  ;;  '((default counsel-projectile-switch-project-action-vc)))
 
 #+end_src
 
