--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-hera.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-hera.org
@@ -26,6 +26,6 @@ one. Any hydra is of course free to show the default hydra if wanted.
 
   ;; bind hera-run
   (global-set-key (kbd "<XF86Launch9>") 'hera-run)
-  (global-set-key (kbd "<C-XF86Launch9>") hera-default-hydra)
+  (global-set-key (kbd "C-<XF86Launch9>") hera-default-hydra)
 #+end_src
 
