--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -150,6 +150,46 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
   )
 #+end_src
 
+** ibuffer
+#+CAPTION: Configure ibuffer
+#+begin_src emacs-lisp
+          (global-set-key (kbd "C-x C-b") 'ibuffer)
+        (setq ibuffer-saved-filter-groups
+              (quote (("default"
+                       ("dired" (mode . dired-mode))
+                       ("org" (name . "^.*org$"))
+                       ("shell" (or
+                                 (mode . eshell-mode)
+                                 (mode . shell-mode)
+                                 (mode . vterm-mode)))
+                       ("programming" (or
+                                       (mode . python-mode)
+                                       (mode . c++-mode)
+                                       (mode . makefile-mode)
+                                       (mode . latex-mode)))
+                       ("emacs" (or
+                                 (name . "^\\*scratch\\*$")
+                                 (name . "^\\*Messages\\*$")))
+                       ))))
+        (add-hook 'ibuffer-mode-hook
+        (lambda ()
+        (ibuffer-auto-mode 1)
+        (ibuffer-switch-to-saved-filter-groups "default")))
+
+        ;; don't show these
+        ;(add-to-list 'ibuffer-never-show-predicates "zowie")
+        ;; Don't show filter groups if there are no buffers in that group
+        (setq ibuffer-show-empty-filter-groups nil)
+
+        ;; Don't ask for confirmation to delete marked buffers
+        (setq ibuffer-expert t)
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package ibuffer-vc )
+#+end_src
+
+
 ** COMMENT sr-speedbar
 #+include: "../nougat/emacs/srspeedbar.org"
 
