Update anzu query replace

--- a/emacs-nougat/nougat/packages/ivy/ivy.org
+++ b/emacs-nougat/nougat/packages/ivy/ivy.org
@@ -3,7 +3,7 @@
   (use-package swiper
     :bind (("C-s" . swiper-isearch)
            ("C-r" . swiper-backward)
-           ("M-%" . anzu-isearch-query-replace))
+           ("M-%" . anzu-query-replace))
     )
 
   (use-package ivy
