--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -153,37 +153,118 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
 ** ibuffer
 #+CAPTION: Configure ibuffer
 #+begin_src emacs-lisp
-          (global-set-key (kbd "C-x C-b") 'ibuffer)
-        (setq ibuffer-saved-filter-groups
-              (quote (("default"
-                       ("dired" (mode . dired-mode))
-                       ("org" (name . "^.*org$"))
-                       ("shell" (or
-                                 (mode . eshell-mode)
-                                 (mode . shell-mode)
-                                 (mode . vterm-mode)))
-                       ("programming" (or
-                                       (mode . python-mode)
-                                       (mode . c++-mode)
-                                       (mode . makefile-mode)
-                                       (mode . latex-mode)))
-                       ("emacs" (or
-                                 (name . "^\\*scratch\\*$")
-                                 (name . "^\\*Messages\\*$")))
-                       ))))
-        (add-hook 'ibuffer-mode-hook
-        (lambda ()
-        (ibuffer-auto-mode 1)
-        (ibuffer-switch-to-saved-filter-groups "default")))
+  (global-set-key (kbd "C-x C-b") 'ibuffer)
+  (setq ibuffer-saved-filter-groups
+        (quote (("default"
+                 ("dired" (mode . dired-mode))
+                 ("org" (name . "^.*org$"))
+                 ("shell" (or
+                           (mode . eshell-mode)
+                           (mode . shell-mode)
+                           (mode . vterm-mode)))
+                 ("git"    (or (name . "^\*magit")
+                               (name . "^\magit")))
+                 ("programming" (or
+                                 (mode . python-mode)
+                                 (mode . c++-mode)
+                                 (mode . makefile-gmake-mode)
+                                 (mode . latex-mode)
 
-        ;; don't show these
-        ;(add-to-list 'ibuffer-never-show-predicates "zowie")
-        ;; Don't show filter groups if there are no buffers in that group
-        (setq ibuffer-show-empty-filter-groups nil)
+                                 (mode . gnu-makefile-mode)))
+                 ("data / configs " (or       (mode . json-mode)
+                                              (mode . yaml-mode)))
+                 ("emacs" (or
+                           (name . "^\\*scratch\\*$")
+                           (name . "^\\*Messages\\*$")
+                           (name . "^\\*straight-process\\*$")
+                           (name . "^\\*Calendar\\*$")
+                           (name . "^\\*lsp*\\*$")
+                           (name . "^\\*pyls*\\*$")
+                           )
+                  )
+                 ))))
+  (add-hook 'ibuffer-mode-hook
+  (lambda ()
+  (ibuffer-auto-mode 1)
+  (ibuffer-switch-to-saved-filter-groups "default")))
 
-        ;; Don't ask for confirmation to delete marked buffers
-        (setq ibuffer-expert t)
+  (require 'ibuf-ext)
+  (add-to-list 'ibuffer-never-show-predicates "^\\*")
+  ;; don't show these
+  ;(add-to-list 'ibuffer-never-show-predicates "zowie")
+  ;; Don't show filter groups if there are no buffers in that group
+  (setq ibuffer-show-empty-filter-groups nil)
+
+  ;; Don't ask for confirmation to delete marked buffers
+  (setq ibuffer-expert t)
 #+end_src
+
+#+RESULTS:
+: t
+
+
+#+CAPTION: display human-readable sizes for buffers
+#+begin_src emacs-lisp
+(defun ajv/human-readable-file-sizes-to-bytes (string)
+  "Convert a human-readable file size into bytes."
+  (interactive)
+  (cond
+   ((string-suffix-p "G" string t)
+    (* 1000000000 (string-to-number (substring string 0 (- (length string) 1)))))
+   ((string-suffix-p "M" string t)
+    (* 1000000 (string-to-number (substring string 0 (- (length string) 1)))))
+   ((string-suffix-p "K" string t)
+    (* 1000 (string-to-number (substring string 0 (- (length string) 1)))))
+   (t
+    (string-to-number (substring string 0 (- (length string) 1))))
+   )
+  )
+
+(defun ajv/bytes-to-human-readable-file-sizes (bytes)
+  "Convert number of bytes to human-readable file size."
+  (interactive)
+  (cond
+   ((> bytes 1000000000) (format "%10.1fG" (/ bytes 1000000000.0)))
+   ((> bytes 100000000) (format "%10.0fM" (/ bytes 1000000.0)))
+   ((> bytes 1000000) (format "%10.1fM" (/ bytes 1000000.0)))
+   ((> bytes 100000) (format "%10.0fk" (/ bytes 1000.0)))
+   ((> bytes 1000) (format "%10.1fk" (/ bytes 1000.0)))
+   (t (format "%10db" bytes)))
+  )
+
+;; Use human readable Size column instead of original one
+(define-ibuffer-column size-h
+  (:name "Size"
+         :inline t
+         :summarizer
+         (lambda (column-strings)
+           (let ((total 0))
+             (dolist (string column-strings)
+               (setq total
+                     ;; like, ewww ...
+                     (+ (float (ajv/human-readable-file-sizes-to-bytes string))
+                        total)))
+             (ajv/bytes-to-human-readable-file-sizes total)))    ;; :summarizer nil
+         )
+  (ajv/bytes-to-human-readable-file-sizes (buffer-size)))
+
+;; Modify the default ibuffer-formats
+(setq ibuffer-formats
+      '((mark modified read-only locked " "
+              (name 20 20 :left :elide)
+              " "
+              (size-h 11 -1 :right)
+              " "
+              (mode 16 16 :left :elide)
+              " "
+              filename-and-process)
+        (mark " "
+              (name 16 -1)
+              " " filename)))
+#+end_src
+
+
+
 
 #+begin_src emacs-lisp
 (use-package ibuffer-vc )
@@ -877,6 +958,22 @@ LSP is the language server protocol
 #+INCLUDE: "../nougat/support/latex/latex.org"
 ** lisp
 #+INCLUDE: "../nougat/support/lisp/lispy-mode.org"
+** yaml
+#+CAPTION:
+#+begin_src emacs-lisp
+   (use-package yaml-mode
+    :straight (yaml-mode :type git :host github :repo "yoshiki/yaml-mode")
+    :config
+    (add-to-list 'auto-mode-alist '("\\.yml\\'" . yaml-mode))
+    (add-to-list 'auto-mode-alist '("\\.yaml\\'" . yaml-mode))
+    )
+     (add-hook 'yaml-mode-hook
+       '(lambda ()
+         (define-key yaml-mode-map "\C-m" 'newline-and-indent)))
+#+end_src
+
+
+
 ** python
 *** black
 #+CAPTION: blacken lets you auto-blackify your python code
