add python to org-babel

--- a/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
@@ -1,23 +1,27 @@
 * org-babel
 ** add languages to babel
 #+begin_src emacs-lisp
-  (org-babel-do-load-languages
-   'org-babel-load-languages
-   '((shell . t)
-     (emacs-lisp . t)))
+    (org-babel-do-load-languages
+     'org-babel-load-languages
+     '((shell . t)
+       (emacs-lisp . t)
+       (python . t)))
 #+end_src
+
 
 ** set default header args
 #+begin_src emacs-lisp
   (setq org-babel-default-header-args
         '((:session . "none")
-;;          (:results . "silent")
+          (:results . "silent")
           (:exports . "code")
           (:cache . "no")
           (:noweb . "no")
           (:hlines . "no")
           (:tangle . "no")))
 #+end_src
+
+
 
 ** COMMENT applescript support
 #+begin_src emacs-lisp
