--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -1026,6 +1026,11 @@ LSP is the language server protocol
 #+INCLUDE: "../nougat/support/python/elpy.org"
 ** markdown
 #+INCLUDE: "../nougat/support/markdown/markdown-mode.org"
+*** markdown-toc
+#+begin_src emacs-lisp
+(use-package markdown-toc)
+#+end_src
+
 ** json
 
 #+begin_src emacs-lisp
