--- a/emacs-nougat/nougat/support/markdown/markdown-mode.org
+++ b/emacs-nougat/nougat/support/markdown/markdown-mode.org
@@ -1,12 +1,13 @@
 * markdown-mode
 All the internet uses it.
 #+begin_src emacs-lisp
-(straight-use-package 'markdown-mode)
-(use-package markdown-mode
-  :ensure nil
-  :commands (markdown-mode gfm-mode)
-  :mode (("README\\.md\\'" . gfm-mode)
-         ("\\.md\\'" . markdown-mode)
-         ("\\.markdown\\'" . markdown-mode))
-  :init (setq markdown-command "multimarkdown"))
+  (straight-use-package 'markdown-mode)
+  (use-package markdown-mode
+    :ensure nil
+    :commands (markdown-mode gfm-mode)
+    :mode (("README\\.md\\'" . gfm-mode)
+           ("readme\\.md\\'" . gfm-mode)
+           ("\\.md\\'" . markdown-mode)
+           ("\\.markdown\\'" . markdown-mode))
+    :init (setq markdown-command "pandoc"))
 #+end_src
