--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -2,7 +2,7 @@
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/setup/theme-readtheorg.setup
 #+language: en
 #+startup: overview indent align content
-#+babel: :cache no
+#+babel: :cache no :results output silent
 #+options: ^:nil num:nil tags:nil toc:nil* OS-specific
 
 #+title: Emacs config, org-mode style.
@@ -171,50 +171,52 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
 ** ibuffer
 #+CAPTION: Configure ibuffer
 #+begin_src emacs-lisp
-  (global-set-key (kbd "C-x C-b") 'ibuffer)
-  (setq ibuffer-saved-filter-groups
-        (quote (("default"
-                 ("dired" (mode . dired-mode))
-                 ("org" (name . "^.*org$"))
-                 ("shell" (or
-                           (mode . eshell-mode)
-                           (mode . shell-mode)
-                           (mode . vterm-mode)))
-                 ("git"    (or (name . "^\*magit")
-                               (name . "^\magit")))
-                 ("programming" (or
-                                 (mode . python-mode)
-                                 (mode . c++-mode)
-                                 (mode . makefile-gmake-mode)
-                                 (mode . latex-mode)
+(use-package ibuffer-projectile)
 
-                                 (mode . gnu-makefile-mode)))
-                 ("data / configs " (or       (mode . json-mode)
-                                              (mode . yaml-mode)))
-                 ("emacs" (or
-                           (name . "^\\*scratch\\*$")
-                           (name . "^\\*Messages\\*$")
-                           (name . "^\\*straight-process\\*$")
-                           (name . "^\\*Calendar\\*$")
-                           (name . "^\\*lsp*\\*$")
-                           (name . "^\\*pyls*\\*$")
-                           )
-                  )
-                 ))))
-  (add-hook 'ibuffer-mode-hook
-  (lambda ()
-  (ibuffer-auto-mode 1)
-  (ibuffer-switch-to-saved-filter-groups "default")))
+    (global-set-key (kbd "C-x C-b") 'ibuffer)
+    (setq ibuffer-saved-filter-groups
+          (quote (("default"
+                   ("dired" (mode . dired-mode))
+                   ("org" (name . "^.*org$"))
+                   ("shell" (or
+                             (mode . eshell-mode)
+                             (mode . shell-mode)
+                             (mode . vterm-mode)))
+                   ("git"    (or (name . "^\*magit")
+                                 (name . "^\magit")))
+                   ("programming" (or
+                                   (mode . python-mode)
+                                   (mode . c++-mode)
+                                   (mode . makefile-gmake-mode)
+                                   (mode . latex-mode)
 
-  (require 'ibuf-ext)
-  (add-to-list 'ibuffer-never-show-predicates "^\\*")
-  ;; don't show these
-  ;(add-to-list 'ibuffer-never-show-predicates "zowie")
-  ;; Don't show filter groups if there are no buffers in that group
-  (setq ibuffer-show-empty-filter-groups nil)
+                                   (mode . gnu-makefile-mode)))
+                   ("data / configs " (or       (mode . json-mode)
+                                                (mode . yaml-mode)))
+                   ("emacs" (or
+                             (name . "^\\*scratch\\*$")
+                             (name . "^\\*Messages\\*$")
+                             (name . "^\\*straight-process\\*$")
+                             (name . "^\\*Calendar\\*$")
+                             (name . "^\\*lsp*\\*$")
+                             (name . "^\\*pyls*\\*$")
+                             )
+                    )
+                   ))))
+    (add-hook 'ibuffer-mode-hook
+    (lambda ()
+    (ibuffer-auto-mode 1)
+    (ibuffer-switch-to-saved-filter-groups "default")))
 
-  ;; Don't ask for confirmation to delete marked buffers
-  (setq ibuffer-expert t)
+    (require 'ibuf-ext)
+    (add-to-list 'ibuffer-never-show-predicates "^\\*")
+    ;; don't show these
+    ;(add-to-list 'ibuffer-never-show-predicates "zowie")
+    ;; Don't show filter groups if there are no buffers in that group
+    (setq ibuffer-show-empty-filter-groups nil)
+
+    ;; Don't ask for confirmation to delete marked buffers
+    (setq ibuffer-expert t)
 #+end_src
 
 #+CAPTION: display human-readable sizes for buffers
@@ -277,37 +279,8 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
               " " filename)))
 #+end_src
 
-
-
-
 #+begin_src emacs-lisp
 (use-package ibuffer-vc )
-#+end_src
-
-** COMMENT sr-speedbar
-#+include: "../nougat/emacs/srspeedbar.org"
-
-#+begin_src emacs-lisp
-(setq speedbar-initial-expansion-list-name "quick buffers")
-(global-set-key (kbd "M-1") 'sr-speedbar-toggle)
-#+end_src
-
-** COMMENT buffer-move
-#+CAPTION: Move buffers around more easily
-#+begin_src emacs-lisp
-  (use-package buffer-move
-  :straight(buffer-move
-  :type git
-  :host github
-  :repo "lukhas/buffer-move"))
-
-  ;; ((global-set-key (kbd "<C-S-up>")     'buf-move-up)
-  ;; (global-set-key (kbd "<C-S-down>")   'buf-move-down)
-  ;; (global-set-key (kbd "<C-S-left>")   'buf-move-left)
-  ;; (global-set-key (kbd "<C-S-right>")  'buf-move-right)
-  ;; ;;(setq buffer-move-stay-after-swap t)
-  ;; ;;(setq buffer-move-behavior 'move)
-  ;; )
 #+end_src
 
 ** split window sensibly
@@ -351,6 +324,32 @@ Line numbers are good.
     (global-display-line-numbers-mode)
   ;;  (setq display-line-numbers 'relative)
     (setq-default display-line-numbers-width 4)
+#+end_src
+
+** COMMENT buffer-move
+#+CAPTION: Move buffers around more easily
+#+begin_src emacs-lisp
+  (use-package buffer-move
+  :straight(buffer-move
+  :type git
+  :host github
+  :repo "lukhas/buffer-move"))
+
+  ;; ((global-set-key (kbd "<C-S-up>")     'buf-move-up)
+  ;; (global-set-key (kbd "<C-S-down>")   'buf-move-down)
+  ;; (global-set-key (kbd "<C-S-left>")   'buf-move-left)
+  ;; (global-set-key (kbd "<C-S-right>")  'buf-move-right)
+  ;; ;;(setq buffer-move-stay-after-swap t)
+  ;; ;;(setq buffer-move-behavior 'move)
+  ;; )
+#+end_src
+
+** COMMENT sr-speedbar
+#+include: "../nougat/emacs/srspeedbar.org"
+
+#+begin_src emacs-lisp
+(setq speedbar-initial-expansion-list-name "quick buffers")
+(global-set-key (kbd "M-1") 'sr-speedbar-toggle)
 #+end_src
 
 ** COMMENT dashboard
@@ -401,7 +400,7 @@ diff-hl is a "git gutter": it hilights changed lines on the left hand side of a 
  :config (global-diff-hl-mode))
 #+end_src
 
-** shift-tab
+** COMMENT shift-tab
 Sometimes it's handy to go back exactly a tab width.
 
 #+begin_src emacs-lisp
@@ -434,28 +433,19 @@ Sometimes it's handy to go back exactly a tab width.
 
 ** hl-todo
 nominally hilight lines that have todo in them
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results output silent
   (use-package hl-todo
    :straight (hl-todo :type git
                  :host github
                  :repo "tarsius/hl-todo")
-   :init  (setq hl-todo-exclude-modes nil)
+   :init  (setq hl-todo-exclude-modes '(list org-mode))
    :config
          (global-hl-todo-mode)
          (setq hl-todo-keyword-faces
                '(("todo"   . "#FF0000")
                  ("fixme"  . "#FF0000"))
          )
-  )
-#+end_src
-
-** COMMENT centered-cursor
-From [[https://two-wrongs.com/centered-cursor-mode-in-vanilla-emacs][centered-cursor in vanilla emacs]], ape centered cursor mode with some speedups
-#+begin_src emacs-lisp
-(setq scroll-preserve-screen-position t
-      scroll-conservatively 0
-      maximum-scroll-margin 0.5
-      scroll-margin 99999)
+         )
 #+end_src
 
 ** Highlight row
@@ -533,25 +523,6 @@ Add fancy modeline, because why not.
                  :repo "git://thelambdalab.xyz/elpher")
    :config
        )
-#+end_src
-
-** COMMENT perspective
-#+begin_src emacs-lisp
-(use-package perspective
-  :config
-  (persp-mode))
-#+end_src
-
-** COMMENT eyebrowse
-[[https://depp.brause.cc/eyebrowse/][eyebrowse]]
-#+begin_src emacs-lisp
-(use-package eyebrowse
- :init (setq eyebrowse-keymap-prefix (kbd"C-x e"))
- :config
- (eyebrowse-mode t)
- (setq eyebrowse-wrap-around t)
- (setq eyebrowse-switch-back-and-forth t)
-     )
 #+end_src
 
 ** winner
@@ -696,14 +667,6 @@ Add fancy modeline, because why not.
     (setq peep-dired-cleanup-on-disable t))
 #+end_src
 
-** COMMENT polymode
-
-#+begin_src emacs-lisp
-  (use-package poly-org
-  :ensure t
-       )
-#+end_src
-
 ** screenshot
 from [[https://old.reddit.com/r/emacs/comments/idz35e/emacs_27_can_take_svg_screenshots_of_itself/g2c2c6y/][alphapapa]]:
 #+begin_src emacs-lisp
@@ -731,6 +694,41 @@ Saves to a temp file and puts the filename in the kill ring."
             )
 #+end_src
 
+** COMMENT centered-cursor
+From [[https://two-wrongs.com/centered-cursor-mode-in-vanilla-emacs][centered-cursor in vanilla emacs]], ape centered cursor mode with some speedups
+#+begin_src emacs-lisp
+(setq scroll-preserve-screen-position t
+      scroll-conservatively 0
+      maximum-scroll-margin 0.5
+      scroll-margin 99999)
+#+end_src
+
+** COMMENT perspective
+#+begin_src emacs-lisp
+(use-package perspective
+  :config
+  (persp-mode))
+#+end_src
+
+** COMMENT eyebrowse
+[[https://depp.brause.cc/eyebrowse/][eyebrowse]]
+#+begin_src emacs-lisp
+(use-package eyebrowse
+ :init (setq eyebrowse-keymap-prefix (kbd"C-x e"))
+ :config
+ (eyebrowse-mode t)
+ (setq eyebrowse-wrap-around t)
+ (setq eyebrowse-switch-back-and-forth t)
+     )
+#+end_src
+
+** COMMENT polymode
+
+#+begin_src emacs-lisp
+  (use-package poly-org
+  :ensure t
+       )
+#+end_src
 
 * projectile
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
@@ -985,8 +983,6 @@ LSP is the language server protocol
        '(lambda ()
          (define-key yaml-mode-map "\C-m" 'newline-and-indent)))
 #+end_src
-
-
 
 ** python
 *** black
