--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -29,9 +29,9 @@
             ^ ^ Open          ^ ^ Search      ^ ^ Buffers      ^ ^ Cache      │ Projectile │
            ─^─^───────────────^─^─────────────^─^──────────────^─^────────────┴────────────╯
            [_f_] file        [_a_] ag        [_s_] switch     [_C_] clear
-           [_r_] recent      [_o_] occur     [_k_] kill       [_x_] remove
+           [_z_] recent      [_o_] occur     [_k_] kill       [_x_] remove
            [_w_] project     [_g_] ggrep     [_v_] term       [_X_] cleanup
-           [_d_] directory   [_h_] history   [_i_] ibuffer
+           [_d_] directory   [_h_] history   [_i_] ibuffer    [_r_] fzf
            ^^^^^^^^
            ^^^^^^^^─────────────────────────────────────────────────────────────────────────
            @ %(projectile-project-root)
@@ -47,11 +47,12 @@
              ("w"   counsel-projectile-switch-project "switch project")
              ("g"   counsel-projectile-git-grep)
              ("v"   projectile-run-vterm-other-window)
-             ("r"   counsel-projectile-switch-to-buffer)
+             ("z"   counsel-projectile-switch-to-buffer)
              ("x"   projectile-remove-known-project)
              ("X"   projectile-cleanup-known-projects)
              ("h" magit-log-buffer-file)
              ("i" (ibuffer t nil nil t))
+             ("r" (counsel-fzf))
   ;;           ("i" (lambda () (interactive) (save-excursion (with-selected-window (split-window-right)(balance-windows)(ibuffer)))))
              ("<XF86Launch8>"   nil "cancel" :color blue)
              )
