update hydra with dired launcher

--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -40,7 +40,7 @@
              ("a"   counsel-projectile-ag)
              ("s"   counsel-projectile-switch-to-buffer)
              ("C"   projectile-invalidate-cache)
-             ("d"   counsel-projectile-find-dir)
+             ("d"   (lambda () (interactive) (save-excursion (with-selected-window (split-window-right)(balance-windows) (dired  default-directory)))))
              ("f"   counsel-projectile-find-file-dwim)
              ("k"   projectile-kill-buffers)
              ("o"   projectile-multi-occur)
