helpful, pretty-hydra

--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -22,7 +22,13 @@
                (vterm-other-window)))
            (switch-to-buffer buffer)))
 
+  ;; (pretty-hydra-define hydra-projectile (:title "Projectile" :quit-key "<XF86Launch8>")
+  ;;   ("Actions" ("Open"
+  ;;               ("f"   counsel-projectile-find-file-dwim)
+  ;;    )
+  ;; )
 
+  ;;   )
            (defhydra hydra-projectile (:color blue :hint nil)
            "
             ^ ^               ^ ^             ^ ^              ^ ^            ╭────────────┐
