--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -34,16 +34,18 @@
             ^ ^               ^ ^             ^ ^              ^ ^            ╭────────────┐
             ^ ^ Open          ^ ^ Search      ^ ^ Buffers      ^ ^ Cache      │ Projectile │
            ─^─^───────────────^─^─────────────^─^──────────────^─^────────────┴────────────╯
-           [_f_] file        [_a_] ag        [_s_] switch     [_C_] clear
+           [_f_] file        [_a_] proj-rg        [_s_] switch     [_C_] clear
            [_z_] recent      [_o_] occur     [_k_] kill       [_x_] remove
            [_w_] project     [_g_] ggrep     [_v_] term       [_X_] cleanup
            [_d_] directory   [_h_] history   [_i_] ibuffer    [_r_] fzf
+                             [_A_] rg
            ^^^^^^^^
            ^^^^^^^^─────────────────────────────────────────────────────────────────────────
            @ %(projectile-project-root)
            "
              ("SPC" nil)
-             ("a"   counsel-projectile-ag)
+             ("a"   counsel-projectile-rg)
+             ("A" counsel-rg)
              ("s"   counsel-projectile-switch-to-buffer)
              ("C"   projectile-invalidate-cache)
              ("d"   (lambda () (interactive) (save-excursion (with-selected-window (split-window-right)(balance-windows) (dired  default-directory)))))
