--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -150,6 +150,12 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
   )
 #+end_src
 
+** hyperbole
+#+CAPTION:
+#+begin_src emacs-lisp
+(use-package hyperbole)
+#+end_src
+
 ** treesitter
 #+begin_src emacs-lisp
 (use-package tree-sitter
