--- a/emacs-nougat/nougat/emacs/minor-modes.org
+++ b/emacs-nougat/nougat/emacs/minor-modes.org
@@ -10,6 +10,8 @@ It's good to know where your whitespace is!
     (setq whitespace-style '(face tabs newline trailing tab-mark
           space-before-tab space-after-tab))
     (global-whitespace-mode 1))
+  ;;add a marker to empty lines, like vim does
+  ;;(setq-default indicate-empty-lines nil)
 #+END_SRC
 
 ** COMMENT prettify-symbols-mode
