--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -150,6 +150,15 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
   )
 #+end_src
 
+** auto-dim-other-buffers
+
+#+begin_src emacs-lisp
+(use-package auto-dim-other-buffers
+ :straight (auto-dim-other-buffers :type git :host github :repo "mina86/auto-dim-other-buffers.el")
+ :config
+ )
+#+end_src
+
 ** hyperbole
 #+CAPTION:
 #+begin_src emacs-lisp
@@ -723,6 +732,22 @@ Saves to a temp file and puts the filename in the kill ring."
             )
 #+end_src
 
+** burly
+#+begin_src emacs-lisp
+(use-package burly
+ :straight (burly :type git :host github :repo "alphapapa/burly.el")
+ :config
+ )
+#+end_src
+
+** unfill
+#+begin_src emacs-lisp
+(use-package unfill
+ :straight (unfill :type git :host github :repo "purcell/unfill")
+ :config
+ )
+#+end_src
+
 ** COMMENT centered-cursor
 From [[https://two-wrongs.com/centered-cursor-mode-in-vanilla-emacs][centered-cursor in vanilla emacs]], ape centered cursor mode with some speedups
 #+begin_src emacs-lisp
@@ -878,6 +903,16 @@ project.)
 
   ;;      )
 #+end_src
+
+** org-ql
+
+#+begin_src emacs-lisp
+(use-package org-ql
+ :straight (org-ql :type git :host github :repo "alphapapa/org-ql")
+ :config
+ )
+#+end_src
+
 
 * COMMENT helm
 ##+INCLUDE: "../nougat/packages/helm/setup.org"
