Add bongo music player

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -150,6 +150,12 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
   )
 #+end_src
 
+** bongo
+#+begin_src emacs-lisp
+(use-package bongo)
+#+end_src
+
+
 ** auto-dim-other-buffers
 
 #+begin_src emacs-lisp
