Box cursor in other window

--- a/emacs-nougat/nougat/emacs/cursor.org
+++ b/emacs-nougat/nougat/emacs/cursor.org
@@ -1,8 +1,9 @@
 * cursor
 ** style
-Cursors have many styles.  I like =bar=.
+Cursors have many styles.  I like =bar=, but I like =box= when i leave the window.
 #+BEGIN_SRC emacs-lisp
   (setq-default cursor-type 'bar)
+  (setq-default cursor-in-non-selected-windows 'box)
 #+END_SRC
 
 ** blinking
